fix: standardize alignment in ordered test section

--- a/src/components/orders-table/list-order-details.scss
+++ b/src/components/orders-table/list-order-details.scss
@@ -13,7 +13,8 @@
 .testsOrderedActions {
   display: flex;
   justify-content: flex-end;
-  padding: layout.$spacing-03 0;
+  gap: layout.$spacing-03;
+  padding-top: layout.$spacing-03;
   width: 100%;
 }
 
@@ -22,13 +23,13 @@
 }
 
 .orderDetailsContainer {
-  width: 80%;
   display: flex;
   flex-direction: column;
   background-color: colors.$white-0;
-  padding: layout.$spacing-03;
-  gap: layout.$spacing-03;
+  padding: layout.$spacing-05;
+  gap: layout.$spacing-05;
   margin-bottom: layout.$spacing-05;
+  border: 1px solid colors.$gray-20;
 }
 
 .orderDetailsContainer:last-child {
@@ -88,13 +89,15 @@
   @include type.type-style('label-01');
   display: inline-block;
   background-color: colors.$gray-20;
-  border-radius: layout.$spacing-03;
-  padding: layout.$spacing-02;
-  padding-inline: layout.$spacing-03;
+  border-radius: layout.$spacing-04;
+  padding: 0 layout.$spacing-03;
+  min-height: layout.$spacing-06;
+  line-height: layout.$spacing-06;
   text-align: center;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
+  max-width: fit-content;
 }
 
 .priorityPill {
